# SPDX-License-Identifier: LGPL-2.1-or-later
# See Notices.txt for copyright information
[package]
name = "riscv-jit-emulator"
version = "0.1.0"
authors = ["Jacob Lifshay <programmerjake@gmail.com>"]
edition = "2018"
license = "LGPL-2.1-or-later"
repository = "https://github.com/programmerjake/riscv-jit-emulator"
publish = false
description = "WIP emulator for riscv that jit-compiles code -- the intention is to run cargo/rustc in a sandbox"
exclude = ["/.vscode"]

[dependencies]
goblin = { version = "0.3.4", default-features = false, features = ["elf32", "elf64", "alloc", "endian_fd"] }
twoway = { version = "0.2.1", default-features = false, features = [] }
hashbrown = "0.11.2"

[build-dependencies]
which = "3"

[build-dependencies.riscv-jit-emulator-instruction-parser-generator]
path = "riscv-jit-emulator-instruction-parser-generator"
version = "=0.1.0"

[workspace]
members = [
    ".",
    "tex-parser",
    "riscv-jit-emulator-instruction-parser-generator",
    "riscv-instructions",
]
