# SPDX-License-Identifier: LGPL-2.1-or-later
# See Notices.txt for copyright information
[package]
name = "riscv-jit-emulator"
version = "0.1.0"
authors = ["Jacob Lifshay <programmerjake@gmail.com>"]
edition = "2018"
license = "LGPL-2.1-or-later"
repository = "https://github.com/programmerjake/riscv-jit-emulator"
publish = false
description = "WIP emulator for riscv that jit-compiles code -- the intention is to run cargo/rustc in a sandbox"
exclude = ["/.vscode"]

[features]
default = ["backend-llvm-11", "default-no-llvm"]
std = []
default-no-llvm = ["backend-no-op"]
backend-no-op = []
backend-llvm = ["std"]
backend-llvm-11 = ["llvm-sys-11", "backend-llvm"]
backend-llvm-10 = ["llvm-sys-10", "backend-llvm"]

[dependencies]
goblin = { version = "0.3.4", default-features = false, features = ["elf32", "elf64", "alloc", "endian_fd"] }
twoway = { version = "0.2.1", default-features = false, features = [] }
hashbrown = "0.11.2"
llvm-sys-10 = { package = "llvm-sys", version = "100.2", optional = true }
llvm-sys-11 = { package = "llvm-sys", version = "110.0", optional = true }
cfg-if = "1.0"

[build-dependencies]
which = "3"

[build-dependencies.riscv-jit-emulator-instruction-parser-generator]
path = "riscv-jit-emulator-instruction-parser-generator"
version = "=0.1.0"

[workspace]
members = [
    ".",
    "tex-parser",
    "riscv-jit-emulator-instruction-parser-generator",
    "riscv-instructions",
]
