# SPDX-License-Identifier: LGPL-2.1-or-later
# See Notices.txt for copyright information
[package]
name = "riscv-jit-emulator-instruction-parser-generator"
version = "0.1.0"
authors = ["Jacob Lifshay <programmerjake@gmail.com>"]
edition = "2018"
license = "LGPL-2.1-or-later"
repository = "https://github.com/programmerjake/riscv-jit-emulator"
publish = false
description = "instruction parser generator for riscv-jit-emulator"

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full", "parsing", "extra-traits"] }

[dependencies.riscv-instructions]
path = "../riscv-instructions"
version = "=0.2.0"
