# SPDX-License-Identifier: LGPL-2.1-or-later
# See Notices.txt for copyright information
[package]
name = "riscv-jit-emulator-instruction-table-parser"
version = "0.1.0"
authors = ["Jacob Lifshay <programmerjake@gmail.com>"]
edition = "2018"
license = "LGPL-2.1-or-later"

[features]
trace = ["peg/trace"]

[dependencies]
once_cell = "1.2"
peg = "0.6.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
