# SPDX-License-Identifier: LGPL-2.1-or-later
# See Notices.txt for copyright information
[package]
name = "riscv-jit-emulator-proc-macro"
version = "0.1.0"
authors = ["Jacob Lifshay <programmerjake@gmail.com>"]
edition = "2018"
license = "LGPL-2.1-or-later"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full", "parsing", "extra-traits"] }

[dependencies.riscv-jit-emulator-instruction-table-parser]
path = "../riscv-jit-emulator-instruction-table-parser"
version = "=0.1.0"
